72 add saving spring session (#73)
* feat: Made SessionData serializable

* feat: Added dependency for serializing spring session scoped beans

* feat: Updated config

(cherry picked from commit 155ee7f29b000c3f4fd0c6218d0e78de504f0e5b)

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,6 +29,11 @@ spring:
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
+  session:
+    store-type: jdbc
+    timeout: 3h
+    jdbc:
+      initialize-schema: always
 logging:
   file:
     name: "${PWD}/logs/server.log"                              # Path to log file
