fix: Updated release workflow
(cherry picked from commit abdfa9c8dc6528bbf4b17c2ab9a7d7835e4615b5)

--- a/.github/actions/update-versions/action.yml
+++ b/.github/actions/update-versions/action.yml
@@ -34,7 +34,7 @@ runs:
       run: |
         git checkout ${{ env.BRANCH_NAME }}
         git add ./src
-        git commit -m "release: Update version to ${{ env.version }}"
+        git commit -m "release: Update version to ${{ env.VERSION }}"
         git push https://x-access-token:${{ inputs.github-token }}@github.com/${{ github.repository }}.git ${{ env.BRANCH_NAME }}
 
     - name: Log change files
